# common/src/main/java/io/apicurio/registry/rest/v2/IdsResource.java
@@ -1,6 +1,5 @@
 package io.apicurio.registry.rest.v2;
 
-import io.apicurio.registry.rest.v2.beans.ArtifactMetaData;
 import javax.ws.rs.GET;
 import javax.ws.rs.Path;
 import javax.ws.rs.PathParam;
@@ -10,8 +9,24 @@ import javax.ws.rs.core.Response;
 /**
  * A JAX-RS interface.  An implementation of this interface must be provided.
  */
-@Path("/api/v2/ids")
+@Path("/v2/ids")
 public interface IdsResource {
+  /**
+   * Gets the content for an artifact version in the registry using the unique content
+   * identifier for that content.  This content ID may be shared by multiple artifact
+   * versions in the case where the artifact versions are identical.
+   *
+   * This operation may fail for one of the following reasons:
+   *
+   * * No content with this `contentId` exists (HTTP error `404`)
+   * * A server error occurred (HTTP error `500`)
+   *
+   */
+  @Path("/contentIds/{contentId}/")
+  @GET
+  @Produces({"application/json", "application/x-protobuf", "application/x-protobuffer"})
+  Response getContentById(@PathParam("contentId") int contentId);
+
   /**
    * Gets the content for an artifact version in the registry using its globally unique
    * identifier.
@@ -22,24 +37,24 @@ public interface IdsResource {
    * * A server error occurred (HTTP error `500`)
    *
    */
-  @Path("/{globalId}")
+  @Path("/globalIds/{globalId}")
   @GET
   @Produces({"application/json", "application/x-protobuf", "application/x-protobuffer"})
-  Response getArtifactByGlobalId(@PathParam("globalId") int globalId);
+  Response getContentByGlobalId(@PathParam("globalId") int globalId);
 
   /**
-   * Gets the metadata for an artifact version in the registry using its globally unique
-   * identifier.  The returned metadata includes both generated (read-only) and editable
-   * metadata (such as name and description).
+   * Gets the content for an artifact version in the registry using the unique content
+   * identifier for that content.  This content ID may be shared by multiple artifact
+   * versions in the case where the artifact versions are identical.
    *
    * This operation may fail for one of the following reasons:
    *
-   * * No artifact version with this `globalId` exists (HTTP error `404`)
+   * * No content with this `contentId` exists (HTTP error `404`)
    * * A server error occurred (HTTP error `500`)
    *
    */
-  @Path("/{globalId}/meta")
+  @Path("/contentHashes/{contentHash}/")
   @GET
-  @Produces("application/json")
-  ArtifactMetaData getArtifactMetaDataByGlobalId(@PathParam("globalId") int globalId);
+  @Produces({"application/json", "application/x-protobuf", "application/x-protobuffer"})
+  Response getContentByHash(@PathParam("contentHash") int contentHash);
 }
